--- a/view/404.ejs
+++ b/view/404.ejs
@@ -5,6 +5,10 @@
     <h1>Nothing Special</h1>
   </body>
   <script>
-    prompt("who are u?");
+    const pro = prompt("who are u?");
+    if (pro !== null) {
+      alert("fuck off!!!");
+      document.querySelector("h1").textContent = "what are you looking at?";
+    }
   </script>
 </html>
