--- a/view/main.ejs
+++ b/view/main.ejs
@@ -2,10 +2,10 @@
 <html lang="en">
   <%- include('./header.ejs') %>
   <body>
-    <form class="p-form" action="/what" method="POST">
-      <label for="title">title</label>
+    <form class="p-form" action="add-value" method="POST">
+      <label for="title">您好!</label>
       <input type="text" name="title" id="title" />
-      <input type="button" name="button" id="button" />
+      <input type="submit" name="button" id="button" value="有種就點啊" />
     </form>
   </body>
 </html>
